# VodLink

./: .gitignore  CMakeLists.txt  PRIVACY.md  README.md
.github/workflows/: build.yml  delete-actions-history.yml  deploy-worker.yml  release.yml  windows-dynamic-build.yml
cmake/: FindLibObs.cmake
docs/: CI_OBS_RUNTIME.md  HARDWARE_ENCODERS.md  OBS_RUNTIME.md  OBS_RUNTIME_CORE_DATA.md  OBS_RUNTIME_NOTES.md  OBS_STREAMING_CHECKLIST.md  RELEASE_VALIDATION.md  VOD_SYNC.md  VOD_VIEWER_AND_QUALITY.md  index.html  privacy.html
docs/assets/: site.css  site.js
installer/windows/: VodLinkBootstrap.cpp  VodLinkBootstrap.rc  VodLinkInstaller.iss
resources/: resources.qrc  vodlink.icns  vodlink.rc
resources/player/: player.html
scripts/ci/: prepare-obs-runtime.ps1  prepare-obs-runtime.sh  qcompress_file.py
src/: main.cpp
src/app/: AppController.cpp  AppController.h  AppPaths.cpp  AppPaths.h  Config.cpp  Config.h  DebugLog.cpp  DebugLog.h
src/auth/: GoogleAuth.cpp  GoogleAuth.h
src/cloud/: SessionClient.cpp  SessionClient.h
src/games/: ForegroundProbe.cpp  ForegroundProbe.h  GameCatalog.cpp  GameCatalog.h  GameDefinition.h  GameDetector.cpp  GameDetector.h  GameLibrary.cpp  GameLibrary.h
src/player/: PlayerBridge.cpp  PlayerBridge.h  SyncPlayer.cpp  SyncPlayer.h
src/streaming/: RtmpStreamer.cpp  RtmpStreamer.h
src/streaming/obs/: ObsRuntime.cpp  ObsRuntime.h
src/ui/: MainWindow.cpp  MainWindow.h
src/youtube/: YouTubeLiveClient.cpp  YouTubeLiveClient.h
worker/: README.md  package-lock.json  package.json  schema.sql  wrangler.toml
worker/src/: auth.ts  index.ts
